# SE

./: .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Makefile  README.md  playwright.config.py  pyproject.toml  pytest.ini  requirements.txt  setup.cfg
.github/workflows/: ci.yml  tests.yml
core/: allure_helpers.py  base_page.py  config.py  locators.py  logger.py
data/: search_queries.py  sections.py  tournaments.py  ui_desktop_rules.py  urls.py
fixtures/: browser.py
pages/: __init__.py  base_page.py  error_page.py  football_page.py  home_page.py  material_page.py  news_page.py  search_page.py  section_page.py  tournament_page.py
scripts/: run_tests.py  validate_allure_results.py
se_ui_autotests.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py  test_sport_express_smoke.py
tests/regression/: test_materials_regression.py  test_search_regression.py  test_tournaments_and_resilience.py  test_url_health_checks.py
tests/smoke/: test_smoke_core.py
tests/ui/: test_desktop_url_matrix.py  test_home_regression.py
tests/unit/: test_failure_taxonomy.py  test_ui_desktop_rules_contract.py
utils/: attachments.py  failure_taxonomy.py  http_health.py  retries.py  ui_desktop_health.py  waiters.py
